--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,5 @@ scipy==1.4.1
 python-igraph==0.8.0
 git+git://github.com/schlegelp/pymaid@master
 seaborn==0.10.1
+scikit-learn==0.22.2
+SQLAlchemy==1.3.16
