--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ scikit-learn==0.22.2
 SQLAlchemy==1.3.16
 jupyterlab==2.1.1
 xlrd==1.2.0
+pyoctree==0.2.10
+# The following requires R be installed and is only used for Figure 4:
+# rpy2==3.3.2
